# discount-tire-recommendation-system

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
configs/: default.yaml  movielens.yaml  vehicle.yaml  yelp2018.yaml
data/processed/: hetero_graph_movielens.pt  hetero_graph_vehicle.pt  tire_text_emb_vehicle.npy
outputs/checkpoints/: two_tower_L3_e15.pt  two_tower_L3_e20.pt  two_tower_L3_e5.pt
outputs/index/: item_vectors.npy  tire.faiss  tire_id_map.json  user_vectors.npy
scripts/: audit_leakage.py  build_graph.py  build_graph_movielens.py  build_graph_vehicle.py  build_graph_yelp2018.py  build_index.py  build_lastfm_graph.py  build_movielens_graph.py  build_review_text_embeddings.py  build_text_embeddings.py  evaluate.py  evaluate_hgt.py  inference.py  pretrain_hgt.py  subsample_movielens.py  subsample_yelp.py  train.py  visualize_graph.py
src/data_processing/: graph_builder.py  graph_utils.py  preprocessing.py  preprocessing_movielens.py  preprocessing_vehicle.py  preprocessing_yelp2018.py
src/losses/: bpr.py  cluster_loss.py
src/models/: __init__.py  cluster_head.py  fusion.py  hgt_encoder.py  hgt_layer.py  hgt_recommender.py  intermediate.py  path_b.py  recommender.py  two_tower.py
src/training/: augment.py  deep_cluster.py  evaluation.py  hard_negatives.py  hgt_pretrainer.py  hgt_trainer.py  pyg_link_sampler.py  sampler.py  subgraph_sampler.py  trainer.py
tests/: test_hgt_forward.py  test_hgt_recommender.py  test_intermediate_layer.py  test_split_integrity.py  test_train_step.py
